# ambient-ai

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EXAMPLES.md  PRIVACY.md  daemon.md
docs/diagrams/: architecture-overview.mmd  coaching-system.mmd  daemon-tick-cycle.mmd  daemon-tick-flow.mmd  data-flow.mmd  file-layout.mmd  gate-sequence.mmd  session-ingestion.mmd  system-architecture.mmd
resources/AmbientAI.app/Contents/: Info.plist
resources/AmbientAI.app/Contents/MacOS/: notify
scripts/: demo.py  gen_examples.py  render_demo_svg.py
scripts/tmux/: ambient-focus-hook.sh
src/ambient/: cli.py  config.py
src/ambient/capture/: hooks.zsh  nsworkspace_listener.py  reader.py  tmux_focus.py
src/ambient/daemon/: claude_history.py  focus_listener.py  launchd.py  lock.py  session_parser.py  state.py  tick.py
src/ambient/detect/: _claude_session_walk.py  changepoints.py  coaching.py  command_mix.py  compression.py  correlator.py  focus_events.py  freeform_fraction.py  git_activity.py  pauses.py  project_capabilities.py  project_ledger.py  projects.py  prompt_patterns.py  slash_taxonomy.py  vectors.py  velocity.py  verification.py
src/ambient/present/: api.py  insights.py  narrator.py  notify.py  prompts.py  recommender.py  tokens.py
tests/: test_api.py  test_changepoints.py  test_claude_history.py  test_cli.py  test_coaching.py  test_command_mix.py  test_compression.py  test_correlator.py  test_daemon_cli.py  test_daemon_launchd.py  test_daemon_lock.py  test_daemon_state.py  test_daemon_tick.py  test_focus_events.py  test_focus_listener.py  test_freeform_fraction.py  test_git_activity.py  test_insights.py  test_insights_phase1.py  test_insights_phase3.py  test_narrator.py  test_notify.py  test_pauses.py  test_project_capabilities.py  test_project_ledger.py  test_projects.py  test_prompt_patterns.py  test_reader.py  test_recommender.py  test_session_parser.py  test_slash_taxonomy.py  test_tmux_focus.py  test_tokens.py  test_vectors.py  test_velocity.py  test_verification.py  test_weekly.py
