[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-ai"
version = "0.1.0"
description = "Passive terminal behavioral monitor with algorithmic detection"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "scikit-learn>=1.5.0",
    "ruptures>=1.1.9",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ambient = "ambient.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
