[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-ai"
version = "0.1.0"
description = "Passive terminal behavioral monitor and development coaching system for macOS"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Andrew Sauer" }]
keywords = ["developer-tools", "behavioral-analytics", "coaching", "terminal", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "scikit-learn>=1.5.0",
    "ruptures>=1.1.9",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/andrewjsauer/ambient-ai"
Repository = "https://github.com/andrewjsauer/ambient-ai"
Issues = "https://github.com/andrewjsauer/ambient-ai/issues"

[project.scripts]
ambient = "ambient.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
